--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Notifications Page</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
@@ -140,7 +139,7 @@
       </div>
     </div>
     </div>
-  </main>s
+  </main>
 </body>
 
 </html>
